# ROS-Module-3

my_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_ws/install/custom_interfaces/include/custom_interfaces/custom_interfaces/msg/: person_info.hpp
my_ws/install/custom_interfaces/include/custom_interfaces/custom_interfaces/msg/detail/: person_info__builder.hpp  person_info__functions.c  person_info__functions.h  person_info__rosidl_typesupport_fastrtps_c.h  person_info__rosidl_typesupport_fastrtps_cpp.hpp  person_info__struct.h  person_info__struct.hpp  person_info__type_support.cpp
my_ws/install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/detail/: multi_two_ints__builder.hpp  multi_two_ints__rosidl_typesupport_fastrtps_c.h  multi_two_ints__rosidl_typesupport_fastrtps_cpp.hpp  multi_two_ints__rosidl_typesupport_introspection_c.h  multi_two_ints__traits.hpp  multi_two_ints__type_support.cpp  multi_two_ints__type_support.h
my_ws/install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces/: _custom_interfaces_s.ep.rosidl_typesupport_fastrtps_c.c  _custom_interfaces_s.ep.rosidl_typesupport_introspection_c.c
my_ws/install/custom_interfaces/share/ament_index/resource_index/rosidl_interfaces/: custom_interfaces
my_ws/install/custom_interfaces/share/custom_interfaces/: package.sh  package.xml
my_ws/install/ros_basic_lessons/lib/ros_basic_lessons/: pub_custom  pub_param  srv_node1  srv_node2  sub_custom  sub_param  tf2_broadcaster  tf2_listener  turtle_sq_shape
my_ws/install/ros_basic_lessons/share/ament_index/resource_index/package_run_dependencies/: ros_basic_lessons
my_ws/install/ros_basic_lessons/share/ament_index/resource_index/parent_prefix_path/: ros_basic_lessons
my_ws/install/ros_basic_lessons/share/ros_basic_lessons/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_ws/install/ros_basic_lessons/share/ros_basic_lessons/launch/: param_display.launch.py  service_nodes_display.launch.py  turtle_square_shape_display.launch.py
my_ws/log/: latest_build
my_ws/src/custom_interfaces/: CMakeLists.txt
my_ws/src/custom_interfaces/srv/: MultiTwoInts.srv  SquareInts.srv
my_ws/src/ros_basic_lessons/: CMakeLists.txt
my_ws/src/ros_basic_lessons/launch/: custom_msg_display.launch.py  turtle_tf2_demo.launch.py
my_ws/src/ros_basic_lessons/src/: move_turtle_square_shape.cpp  pub_custom.cpp  pub_param.cpp  service_node1.cpp  service_node2.cpp  sub_custom.cpp  sub_param.cpp  tf2_broadcaster.cpp  tf2_listener.cpp
(+4 files in other folders)
